Manage content-type err | set middleware
